<resources>
    <string name="app_name">Chipster</string>
    <string name="hcp_formatted_int_frac">%1$d.%2$d</string>
    <string name="amount_of_rounds_played">%1$d</string>
    <string name="avg_score_formatted_int_frac">%1$d.%2$d</string>
    <string name="practiced_time_abbreviation">Pract. time</string>
    <string name="hours_minutes_formatted">%1$d:%2$d</string>
    <string name="average_session">Avg. session</string>
    <string name="handicap">HANDICAP</string>
    <string name="rounds">ROUNDS</string>
    <string name="avg_score">AVG. SCORE</string>
    <string name="total_sessions">Tot. sessions</string>
    <string name="total_sessions_formatted">%1$d</string>
    <string name="change_handicap">Chg. handicap</string>
    <string name="change_in_handicap_formatted">%1$s%2$d.%3$d</string>
    <string name="tee_off">Tee off</string>
    <string name="add_round">Add Round</string>
    <string name="show_rounds_button_text">rounds</string>
    <string name="hole_nbr_title">Hole %1$d</string>
    <string name="index_value_1">1</string>
    <string name="index_value_2">2</string>
    <string name="index_value_3">3</string>
    <string name="index_value_4">4</string>
    <string name="index_value_5">5</string>
    <string name="index_value_6">6</string>
    <string name="index_value_7">7</string>
    <string name="index_value_8">8</string>
    <string name="index_value_9">9</string>
    <string name="index_value_10">10</string>
    <string name="index_value_11">11</string>
    <string name="index_value_12">12</string>
    <string name="index_value_13">13</string>
    <string name="index_value_14">14</string>
    <string name="index_value_15">15</string>
    <string name="index_value_16">16</string>
    <string name="index_value_17">17</string>
    <string name="index_value_18">18</string>
    <string name="stroke_value_1">1</string>
    <string name="stroke_value_2">2</string>
    <string name="stroke_value_3">3</string>
    <string name="stroke_value_4">4</string>
    <string name="stroke_value_5">5</string>
    <string name="stroke_value_6">6</string>
    <string name="par_value_other">+</string>
    <string name="par_value_6">6</string>
    <string name="par_value_5">5</string>
    <string name="par_value_4">4</string>
    <string name="par_value_3">3</string>
    <string name="par">Par %1$d</string>
    <string name="index">Index %1$d</string>
    <string name="strokes">Strokes %1$d</string>
    <string name="stroke_value_7">7</string>
    <string name="stroke_value_other">+</string>
    <string name="putt_value_1">1</string>
    <string name="putt_value_2">2</string>
    <string name="putt_value_3">3</string>
    <string name="putt_value_other">+</string>
    <string name="putts">Putts %1$d</string>
    <string name="index_edit">+</string>
    <string name="hole_out">Hole Out</string>
    <string name="slope">Slope</string>
    <string name="holes">Holes</string>
</resources>
